# model-based_rl_main

./: .gitignore  Makefile  README.md  lxm3_launcher.py  pyproject.toml
GPJax_AScannell/: __init__.py
GPJax_AScannell/gpjax/: conditionals.py  covariances.py  datasets.py  kullback_leiblers.py  mean_functions.py  multidispatch.py
GPJax_AScannell/gpjax/custom_types/: custom_types.py  shapes.py
GPJax_AScannell/gpjax/kernels/: __init__.py  base.py  distances.py  linears.py  multioutput.py  stationaries.py
GPJax_AScannell/gpjax/likelihoods/: base.py  scalar_continuous.py  scalar_discrete.py
GPJax_AScannell/gpjax/models/: __init__.py  model.py  svgp.py
GPJax_AScannell/gpjax/parameters/: transforms.py
GPJax_AScannell/gpjax/prediction/: gp.py
GPJax_AScannell/gpjax/utilities/: __init__.py  ops.py
project_name/: baselines_run.py  config.py  gpjadx_mogpjax_tesing.py  gpjax_dataset_vmap_tesy.py  gpjaxas_regression_testing.ipynb  main.py  mogpjaxas_regression_testing.ipynb  oceanmodelling.ipynb  test_colorednoise_to_jax.ipynb  test_gpjax_gpjaxas.py  tesy_tesy.py  utils.py
project_name/agents/: agent_base.py  agent_main.py
project_name/agents/MPC/: MPC.py  MPCAgent.py  MPCConfig.py  __init__.py
project_name/agents/PETS/: PETS.py  PETSConfig.py  __init__.py
project_name/agents/PILCO/: PILCO.py  PILCOConfig.py  __init__.py  controllers.py  rewards.py
project_name/agents/TIP/: TIP.py  TIPConfig.py  __init__.py
project_name/dynamics_models/: __init__.py  custom_sample_approx.py  dynamics_model_base.py  gp_dynamics_model.py  gp_dynamics_model_gpjax.py  gp_dynamics_model_svgp.py  gp_dynamics_model_svgpjax.py  gp_dynamics_model_svgpjax_old.py  gpfs_gp.py  neural_net_dynamics_model.py  svgp_dynamics_model.py
project_name/dynamics_models/gp/: __init__.py
project_name/dynamics_models/tests/: kernel_factorisation_tesy.py
project_name/dynamics_models/utils/: fully_connected_neural_net.py  utils.py
project_name/envs/: __init__.py  gymnax_pendulum.py  gymnax_pilco_cartpole.py  pendulum.py  pilco_cartpole.py  wet_chicken.py  wrappers.py
project_name/util/: control_util.py  misc_util.py
project_name/viz/: __init__.py  plot.py
