[project]
name = "model-based_rl_main"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "james_dell", email = "james.rudd.jones@gmail.com"},
]
dependencies = [
    "absl-py>=2.1.0",
    "flax<=0.10.0",
    "ml-collections>=1.0.0",
    "wandb>=0.19.8",
    "matplotlib>=3.10.1",
    "neatplot>=0.1.0",
    "gymnax>=0.0.8",
    "tensorflow-probability>=0.25.0",
    "jaxtyping>=0.3.0",
    "jax[cuda12_pip]>=0.5.2",
]
#dependencies = [
#    "jax<0.4.28",
#    "wandb>=0.19.6",
#    "gymnasium>=1.0.0",
#    "absl-py>=2.1.0",
#    "ml-collections>=1.0.0",
#    "tqdm>=4.67.1",
#    "colorednoise>=2.2.0",
#    "matplotlib>=3.10.0",
#    "flax<0.10.0",
#    "gymnax>=0.0.8",
#    "chex>=0.1.89",
#    "tensorflow-probability>=0.22.1",
#    "multidispatch==0.2.0",
#    "neatplot>=0.1.0",
#    "gpjax==0.9.4",
#]

requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

 [[tool.pdm.source]]
 name = "jax_cuda"
 url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
 verify_ssl = true
 type = "find_links"
